bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/EmployeeToRoute__c.object-meta.xml
<CustomObject>
    <label>Employee To Route</label>
    <nameField>
        <label>Employee To Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee To Routes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>