bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Employee_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Employee External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>