bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Employee_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Employee_ExtId__c</fullName>
    <label>Employee External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>