bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relation to route sales Geo</description>
    <label>Route</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Employee To Routes</relationshipLabel>
    <relationshipName>Employee_To_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>