bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Route_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_End_Date__c</fullName>
    <label>Route End Date</label>
    <type>DateTime</type>
</CustomField>