bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Route_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Route_Start_Date__c</fullName>
    <label>Route Start Date</label>
    <type>DateTime</type>
</CustomField>