bundled_metadata/force-app/main/default/objects/EmployeeToRoute__c/fields/Todays_Cash_Balance__c.field-meta.xml
<CustomField>
    <fullName>Todays_Cash_Balance__c</fullName>
    <label>Today&apos;s Cash Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>